--- a/index.html
+++ b/index.html
@@ -1,43 +1,69 @@
 <!DOCTYPE HTML>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="theme-color" content="#f5f5a8"/>
-        <title>Die in the Dungeon CLASSIC</title>
-        <style>
-            body {
-                background-color: #f5f5a8;
-                background-image: url('https://img.itch.zone/aW1nLzU2MzA1NjYucG5n/original/laY8iZ.png');
-                background-repeat: repeat;
-                background-position: 50% 0;
-                font-family: Alata, sans-serif;
-                color: #222;
-            }
-            .game_frame {
-                width: 960px;
-                height: 540px;
-                margin: 20px auto;
-                background: #76c864;
-                position: relative;
-            }
-            .description {
-                max-width: 800px;
-                margin: 20px auto;
-                font-size: 1.2em;
-                line-height: 1.5;
-            }
-            .description strong {
-                color: #fa945b;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="game_frame">
-            <!-- Placeholder for the game iframe -->
-            <iframe allowtransparency="true" webkitallowfullscreen="true" mozallowfullscreen="true" msallowfullscreen="true" allow="autoplay; fullscreen *; geolocation; microphone; camera; midi; monetization; xr-spatial-tracking; gamepad; gyroscope; accelerometer; xr; cross-origin-isolated; web-share" frameborder="0" allowfullscreen="true" scrolling="no" src="https://html-classic.itch.zone/html/7330268/Die%20in%20the%20Dungeon%201.6.2f%20[WEB]/index.html?v=1732313661" width="960" height="540"></iframe>
-        </div>
-        <div class="description">
-            <p>Die in the Dungeon is a deck-building, turn-based roguelite where you don't use cards, butdice! Try to find the best combination to conquer the 2X-floor dungeon</strong>, but be careful, a frog like you can only get so far before encountering a prey too big to swallow...<br>PUMP AC:</p>
-        </div>
-    </body>
+<head>
+    <meta charset="UTF-8"/>
+    <title>Meowsican Game</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-color: #ff9494;
+            background-image: url('https://img.itch.zone/aW1nLzE3MzkxMzAxLnBuZw==/original/1qppun.png');
+            background-repeat: repeat;
+            background-position: 0 0;
+        }
+        .game_frame {
+            margin: 20px 0;
+            width: 100%;
+            max-width: 960px;
+            display: flex;
+            justify-content: center;
+        }
+        iframe {
+            width: 100%;
+            height: 500px;
+            max-width: 960px;
+        }
+        .game_description {
+            max-width: 800px;
+            padding: 10px;
+            text-align: center;
+            width: 90%;
+        }
+        h1 {
+            font-size: 1.5rem;
+            margin: 10px 0;
+        }
+        p {
+            font-size: 1rem;
+        }
+    </style>
+</head>
+<body>
+    <div class="game_frame">
+        <iframe 
+            allow="autoplay; fullscreen *;" 
+            frameborder="0" 
+            allowfullscreen 
+            scrolling="no" 
+            src="https://html-classic.itch.zone/html/11224170/meowsican/index.html">
+        </iframe>
+    </div>
+    <div class="game_description">
+        <h1>Welcome to Meowsican!<br>PUMP CA：</h1>
+        <p>
+            Step into a whimsical world where music and mischief collide. In <em>Meowsican</em>, create musical scales using cat meows.
+            These aren’t just ordinary felines—they’re square-shaped, mischievous cats with unique sounds and personalities.
+        </p>
+        <p>
+            Whether you’re a fan of cats, music, or just looking for a fun and challenging game, <em>Meowsican</em> is perfect for you.
+            Lead your meowsicians to glory and create the symphony of your dreams!
+        </p>
+    </div>
+</body>
 </html>
